# google-cloud-cpp-spanner

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .cmake-format.py  .codecov.yml  .dockerignore  .gitignore  BUILD  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  WORKSPACE
.bazelci/: presubmit.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bazel/: BUILD  compiler_id.sh  compiler_version.sh  google_cloud_cpp_spanner_deps.bzl  googleapis.BUILD  workspace_status.sh
ci/: check-include-guards.gawk  check-markdown.sh  check-style.sh  colors.sh  define-dump-log.sh  generate-badges.sh  install-bazel.sh  install-retry.sh
ci/etc/: publish-refdocs.sh  repo-config.sh
ci/generate-markdown/: generate-packaging.sh  generate-readme.sh  generate-spanner-readme.sh
ci/kokoro/: Dockerfile.centos  Dockerfile.fedora-install  Dockerfile.ubuntu  Dockerfile.ubuntu-xenial  build-docker.sh  create-docker-image.sh  define-docker-variables.sh  dump-logs.sh  gcloud-functions.sh  install-linux.sh  linux-config.sh
ci/kokoro/cmake/: README.md
ci/kokoro/docker/: README.md  asan-presubmit.cfg  bazel-dependency-presubmit.cfg  build-in-docker-bazel-dependency.sh  build-in-docker-bazel.sh  build-in-docker-cmake.sh  build.sh  check-api.cfg  check-api.sh  clang-tidy.cfg  cmake-super.cfg  cmake.cfg  common.cfg  coverage-presubmit.cfg  cxx17-presubmit.cfg  define-docker-variables.sh  dump-reports.sh  gcc-4.8-presubmit.cfg  integration-presubmit.cfg  msan-presubmit.cfg  publish-refdocs.sh  tsan.cfg  ubsan.cfg  upload-cache.sh  upload-coverage.sh  upload-docs.sh
ci/kokoro/install/: Dockerfile.centos-7  Dockerfile.centos-8  Dockerfile.debian-buster  Dockerfile.debian-stretch  Dockerfile.fedora  Dockerfile.opensuse-leap  Dockerfile.opensuse-tumbleweed  Dockerfile.ubuntu-bionic  Dockerfile.ubuntu-trusty  Dockerfile.ubuntu-xenial  build.sh  common.cfg
ci/kokoro/macos/: build-bazel.sh  build-cmake.sh  build.sh  common.cfg
ci/kokoro/windows/: CMakeLists.txt  bazel.cfg  build-bazel.ps1  build-cmake-dependencies.ps1  build-cmake.ps1  build-dependencies.ps1  build-new.bat  build-project.ps1  build.bat  build.ps1  cmake-presubmit.cfg  common.cfg
ci/super/: CMakeLists.txt
ci/test-install/: BUILD  CMakeLists.txt  WORKSPACE  spanner_install_test.cc
ci/test-markdown/: README.md  dockerfile2markdown.sh  generate-packaging.sh
ci/test-readme/: README.md  README.md.in  extract-install.sh  extract-readme.sh  generate-install.sh  generate-readme.sh
cmake/: CreateBazelConfig.cmake  EnableClangTidy.cmake  EnableCoverage.cmake  EnableCxxExceptions.cmake  EnableDoxygen.cmake  EnableWerror.cmake  GoogleCloudCppCommon.cmake  GoogleCloudCppSpannerFunctions.cmake
doc/: Dockerfile.test-instructions  cutting-a-release.md  doxygen-style-guide.md  packaging.md  setup-cmake-environment.md  testing-resources.md
google/cloud/spanner/: ;  BUILD  CMakeLists.txt  README.md  background_threads.h  backoff_policy.h  backup.h  batch_dml_result.h  bytes.cc  bytes.h  bytes_benchmark.cc  bytes_test.cc  client.cc  client.h  client_options.cc  client_options.h  client_options_test.cc  client_test.cc  column.h  commit_result.h  config-version.cmake.in  connection.h  connection_options.cc  connection_options.h  connection_options_test.cc  create_instance_request_builder.h  create_instance_request_builder_test.cc  database.cc  database.h  database_admin_client.cc  database_admin_client.h  database_admin_client_test.cc  database_admin_connection.cc  database_test.cc  (+77 more)
google/cloud/spanner/samples/: BUILD  CMakeLists.txt  README.md  data_client_samples.cc  database_admin_samples.cc  mock_execute_query.cc  sample_utils.cc  sample_utils.h  samples.cc  spanner_client_samples.bzl
latest/: annotated.html  background__threads_8h.html  background__threads_8h_source.html  backoff__policy_8h.html  backoff__policy_8h_source.html  backup_8cc.html  backup_8cc_source.html  backup_8h.html  backup_8h_source.html  batch__dml__result_8h.html  batch__dml__result_8h_source.html  benchmarks__config_8cc.html  benchmarks__config_8cc_source.html  benchmarks__config_8h.html  benchmarks__config_8h_source.html  bytes_8cc.html  bytes_8cc_source.html  bytes_8h.html  bytes_8h_source.html  bytes__benchmark_8cc.html  bytes__benchmark_8cc_source.html  classes.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1BackgroundThreads-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1BackgroundThreads.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Backup-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Backup.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bound-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bound.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bytes-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bytes.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bytes_1_1Decoder_1_1Iterator-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bytes_1_1Decoder_1_1Iterator.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bytes_1_1Decoder_1_1iterator-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Bytes_1_1Decoder_1_1iterator.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Client-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Client.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1ClientOptions-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1ClientOptions.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Connection-members.html  classgoogle_1_1cloud_1_1spanner_1_1v0_1_1Connection.html  (+653 more)
latest/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+85 more)
quickstart/: BUILD  CMakeLists.txt  README.md  WORKSPACE  quickstart.cc
super/: CMakeLists.txt  ExternalProjectHelper.cmake
(+164 files in other folders)
